--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
               <a class="nav-link text-white" href="#">Bienvenido, <%= current_user.email %></a>
             </li>
             <li class="nav-item">
+  <%= link_to "Mis Materiales", materials_path, class: "nav-link text-white" %>
+            </li>
+            <li class="nav-item">
               <%= link_to "Perfil", edit_user_registration_path, class: "nav-link text-white" %>
             </li>
             <li class="nav-item">
