--- a/app/views/materials/index.html.erb
+++ b/app/views/materials/index.html.erb
@@ -1,43 +1,30 @@
-<p style="color: green"><%= notice %></p>
-
-<% content_for :title, "Materials" %>
-
-<h1>Materials</h1>
-
-<div id="materials">
-  <% @materials.each do |material| %>
-    <%= render material %>
-    <p>
-      <%= link_to "Show this material", material %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New material", new_material_path %>
 
 <h1>Mis Materiales Reciclados</h1>
-<table class="table">
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Descripción</th>
-      <th>Cantidad</th>
-      <th>Acciones</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @materials.each do |material| %>
+<div class="table-responsive text-center">
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= material.name %></td>
-        <td><%= material.description %></td>
-        <td><%= material.quantity %></td>
-        <td>
-          <%= link_to "Editar", edit_material_path(material), class: "btn btn-warning btn-sm" %>
-          <%= link_to "Eliminar", material, method: :delete, data: { confirm: "¿Estás seguro?" }, class: "btn btn-danger btn-sm" %>
-        </td>
+        <th>Nombre</th>
+        <th>Descripción</th>
+        <th>Cantidad</th>
+        <th>Acciones</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @materials.each do |material| %>
+        <tr>
+          <td><%= material.name %></td>
+          <td><%= material.description %></td>
+          <td><%= material.quantity %></td>
+          <td>
+            <%= link_to "Editar", edit_material_path(material), class: "btn btn-warning btn-sm" %>
+            <%= link_to "Eliminar", material, method: :delete, data: { confirm: "¿Estás seguro?" }, class: "btn btn-danger btn-sm" %>
+            <%= link_to "New material", new_material_path, class: "btn btn-success btn-sm" %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <%= link_to "Registrar Nuevo Material", new_material_path, class: "btn btn-success" %>
